--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,22 @@
-.DS_Store
-
 bin/
 
+# OS X
+.DS_Store
+
+# Haskell
+dist
+cabal-dev
 *.o
 *.hi
 *.chi
 *.chs.h
+.virtualenv
+.hpc
+.hsenv
+.cabal-sandbox/
+cabal.sandbox.config
+cabal.config
+*.prof
+*.hp
+*.aux
 
