--- a/Lab 4/Lab4.cabal
+++ b/Lab 4/Lab4.cabal
@@ -17,6 +17,7 @@ executable Lab4
   main-is:             Main.hs
   other-extensions:    BangPatterns
   build-depends:       base >=4.7 && <4.8,
-                       network
+                       network,
+                       containers
   hs-source-dirs:      src
   default-language:    Haskell2010
