--- a/Lab 4/Lab4.cabal
+++ b/Lab 4/Lab4.cabal
@@ -21,6 +21,7 @@ executable Lab4
                        mtl,
                        network,
                        random,
+                       split,
                        transformers
   hs-source-dirs:      src
   default-language:    Haskell2010
